force-app/main/default/objects/custom_create173__c/custom_create173__c.object-meta.xml
<CustomObject>
    <label>Custom created object173</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects173</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>