force-app/main/default/objects/custom_create173__c/fields/custom_create_173field555__c.field-meta.xml
<CustomField>
    <fullName>custom_create_173field555__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 173field555</label>
    <type>Checkbox</type>
</CustomField>